# subscriptions

./: .env_example  .gitignore  README.md  alembic.ini  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 184d9247c8ed_data.py  44351d55ea2b_init.py  6431b6741e82_init.py
src/api/v1/: account.py  notification.py  notifications.py  payment_method.py  payment_methods.py  payments.py  subscription.py  subscriptions.py  users.py
src/core/: settings.py
src/crud/: account.py  notification.py  payment.py  payment_method.py  payment_methods.py  subscription.py  user.py  users.py
src/db/: postgres.py
src/models/: models.py
src/schemas/: schemas.py
tests/: test_users.py
